<resources>
    <string name="app_name">LoftMoney</string>


    <string name="add_item_hint_name">Название</string>
    <string name="add_item_hint_price">Цена</string>
    <string name="add_item_button">Добавить</string>


    <string name="main_screen_title">Учет бюджета</string>
    <string name="main_tab_incomes">Доходы</string>
    <string name="main_tab_expenses">Расходы</string>
    <string name="main_tab_balance">Баланс</string>


    <string name="action_mode_item_delete">Удалить</string>

    <string name="auth_enter">Войти</string>

    <string name="balance_balance_title">Доступные финансы</string>
    <string name="balance_expense_title">Расход</string>
    <string name="balance_income_title">Доход</string>
</resources>
