<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddItemActivity">

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="@string/add_item_hint_name"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:hint="@string/add_item_hint_price"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:inputType="number"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:icon="@drawable/ic_check"
        app:iconTint="@color/color_add_btn"
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:background="@null"
        android:drawablePadding="8dp"
        android:enabled="false"
        android:text="@string/add_item_button"
        android:textColor="@color/color_add_btn"
        android:textSize="18sp" />


</LinearLayout>